Remove CertificationIdOfSoftwareComponent field
