# x/compliance/types/message_provision_model.go
@@ -17,32 +17,30 @@ func NewMsgProvisionModel(
 	signer string, vid int32, pid int32, softwareVersion uint32, softwareVersionString string, cDVersionNumber uint32,
 	provisionalDate string, certificationType string, reason string, programTypeVersion string, cDCertificateID string,
 	familyID string, supportedClusters string, compliantPlatformUsed string, compliantPlatformVersion string, osVersion string,
-	certificationRoute string, programType string, transport string, parentChild string, certificationIDOfSoftwareComponent string,
-	schemaVersion uint32,
+	certificationRoute string, programType string, transport string, parentChild string, schemaVersion uint32,
 ) *MsgProvisionModel {
 	return &MsgProvisionModel{
-		Signer:                             signer,
-		Vid:                                vid,
-		Pid:                                pid,
-		SoftwareVersion:                    softwareVersion,
-		SoftwareVersionString:              softwareVersionString,
-		CDVersionNumber:                    cDVersionNumber,
-		ProvisionalDate:                    provisionalDate,
-		CertificationType:                  certificationType,
-		Reason:                             reason,
-		ProgramTypeVersion:                 programTypeVersion,
-		CDCertificateId:                    cDCertificateID,
-		FamilyId:                           familyID,
-		SupportedClusters:                  supportedClusters,
-		CompliantPlatformUsed:              compliantPlatformUsed,
-		CompliantPlatformVersion:           compliantPlatformVersion,
-		OSVersion:                          osVersion,
-		CertificationRoute:                 certificationRoute,
-		ProgramType:                        programType,
-		Transport:                          transport,
-		ParentChild:                        parentChild,
-		CertificationIdOfSoftwareComponent: certificationIDOfSoftwareComponent,
-		SchemaVersion:                      schemaVersion,
+		Signer:                   signer,
+		Vid:                      vid,
+		Pid:                      pid,
+		SoftwareVersion:          softwareVersion,
+		SoftwareVersionString:    softwareVersionString,
+		CDVersionNumber:          cDVersionNumber,
+		ProvisionalDate:          provisionalDate,
+		CertificationType:        certificationType,
+		Reason:                   reason,
+		ProgramTypeVersion:       programTypeVersion,
+		CDCertificateId:          cDCertificateID,
+		FamilyId:                 familyID,
+		SupportedClusters:        supportedClusters,
+		CompliantPlatformUsed:    compliantPlatformUsed,
+		CompliantPlatformVersion: compliantPlatformVersion,
+		OSVersion:                osVersion,
+		CertificationRoute:       certificationRoute,
+		ProgramType:              programType,
+		Transport:                transport,
+		ParentChild:              parentChild,
+		SchemaVersion:            schemaVersion,
 	}
 }
 
