# x/compliance/types/message_update_compliance_info.go
@@ -19,30 +19,29 @@ func NewMsgUpdateComplianceInfo(creator string, vid int32, pid int32, softwareVe
 	cDVersionNumber string, date string, reason string, owner string, cDCertificateID string, certificationRoute string,
 	programType string, programTypeVersion string, compliantPlatformUsed string, compliantPlatformVersion string,
 	transport string, familyID string, supportedClusters string, oSVersion string, parentChild string,
-	certificationIDOfSoftwareComponent string, schemaVersion uint32) *MsgUpdateComplianceInfo {
+	schemaVersion uint32) *MsgUpdateComplianceInfo {
 	return &MsgUpdateComplianceInfo{
-		Creator:                            creator,
-		Vid:                                vid,
-		Pid:                                pid,
-		SoftwareVersion:                    softwareVersion,
-		CertificationType:                  certificationType,
-		CDVersionNumber:                    cDVersionNumber,
-		Date:                               date,
-		Reason:                             reason,
-		Owner:                              owner,
-		CDCertificateId:                    cDCertificateID,
-		CertificationRoute:                 certificationRoute,
-		ProgramType:                        programType,
-		ProgramTypeVersion:                 programTypeVersion,
-		CompliantPlatformUsed:              compliantPlatformUsed,
-		CompliantPlatformVersion:           compliantPlatformVersion,
-		Transport:                          transport,
-		FamilyId:                           familyID,
-		SupportedClusters:                  supportedClusters,
-		OSVersion:                          oSVersion,
-		ParentChild:                        parentChild,
-		CertificationIdOfSoftwareComponent: certificationIDOfSoftwareComponent,
-		SchemaVersion:                      schemaVersion,
+		Creator:                  creator,
+		Vid:                      vid,
+		Pid:                      pid,
+		SoftwareVersion:          softwareVersion,
+		CertificationType:        certificationType,
+		CDVersionNumber:          cDVersionNumber,
+		Date:                     date,
+		Reason:                   reason,
+		Owner:                    owner,
+		CDCertificateId:          cDCertificateID,
+		CertificationRoute:       certificationRoute,
+		ProgramType:              programType,
+		ProgramTypeVersion:       programTypeVersion,
+		CompliantPlatformUsed:    compliantPlatformUsed,
+		CompliantPlatformVersion: compliantPlatformVersion,
+		Transport:                transport,
+		FamilyId:                 familyID,
+		SupportedClusters:        supportedClusters,
+		OSVersion:                oSVersion,
+		ParentChild:              parentChild,
+		SchemaVersion:            schemaVersion,
 	}
 }
 
